[package]
name = "krapslog"
version = "0.4.1"
authors = ["Adam Jensen <adam@acj.sh>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/acj/krapslog-rs"
description = "Visualize log files using sparklines"
readme = "README.md"
keywords = ["sparklines", "logs", "dataviz", "debugging"]
categories = ["command-line-utilities", "parser-implementations", "visualization"]
exclude = [
    ".github/*",
]

[lib]
name = "krapslog"
path = "src/lib.rs"

[[bin]]
name = "krapslog"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0"
atty = "0.2"
chrono = "0.4"
clap = "3.0"
file-chunker = "0.1.1"
memmap2 = "0.5.2"
num_cpus = "1.13"
rayon = "1.5"
regex = "1.4.2"
tempfile = "3.3"
terminal_size = "0.1"