[package]
name = "krapslog"
version = "0.5.4"
authors = ["Adam Jensen <adam@acj.sh>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/acj/krapslog-rs"
description = "Visualize log files using sparklines"
readme = "README.md"
keywords = ["sparklines", "logs", "dataviz", "debugging"]
categories = ["command-line-utilities", "parser-implementations", "visualization"]
exclude = [
    ".github/*",
]

[lib]
name = "krapslog"
path = "src/lib.rs"

[[bin]]
name = "krapslog"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
clap = "4.0"
file-chunker = "0.1.1"
memmap2 = "0.9.0"
num_cpus = "1.13"
rayon = "1.5"
regex = "1.9.5"
tempfile = "3.3"
terminal_size = "0.3.0"
